tests/hopix/hopix/typechecker/good/id.hopix
val id = \['a](x : 'a) => (x : 'a)