tests/hopix/hopix/typechecker/bad/polymorphism3.hopix
type t ('a) = K ('a)

fun open ['a] (x : t) : 'a =
  x ? K (y : 'a) => y

val y : int = open[int] (K[int] (1))
